== Version 2.0.21 Work in progress (not released -- this is a draft) ==

  User side :
  -----------
    # Apps:
        * Activities :
            - In CSV import:
                - The LINK credentials are checked for "My participation".
                - Teams are correctly managed as participating users.


== Version 2.0.20 ==

  User side :
  -----------
    # Apps:
        * Emails :
            - These fields of 'EmailTemplate' cannot be inner-edited anymore: 'body', 'body_html'.
        * SMS :
            - The messaging lists are now excluded correctly from the edition form of 'SMSCampaigns'.
            - These fields of 'MessageTemplate' are not inner-editable anymore: subject & body.


== Version 2.0.19 ==

  User side :
  -----------
    # Apps:
        * Projects :
            - The field 'Project.effective_end_date' cannot be inner-edited anymore (use the button 'Close the project').
            - In the forms for 'AbstractProject', the fields "start_date" & "end_date" are not required any more.
            - The button "Back to the project" has been fixed.
            - The display of the hourly cost in the Resources' brick has been fixed.
        * SMS:
            - The field 'MessagingList.contacts' cannot be inner-edited anymore.


== Version 2.0.18 ==

  User side :
  -----------
    # Apps:
        * Billing :
            - The LateX templates have been fixed : the settlement terms is now used correctly.
            - In the block "Payments information", the button to select an account is always displayed when no account is selected.
        * SMS :
            - Many fixes & improvements have been done.


== Version 2.0.17 ==

  UPGRADE NOTE :
    - You should upgrade the version of Pillow to 7.1 (eg: pip install -U creme/requirements.txt ).
    - You should re-generate the media files (python manage.py generatemedia).

  Users side :
  ------------
    # A XSS issue in popover title has been fixed.